package pt.trasmum.servidor.dominio;

public enum TipoPagamento {
    TRANSFERENCIA,
    NUMERARIO,
    CHEQUE
}
