package pt.trasmum.servidor.dto.ingestao;

public class RemessaDTO {
    public int idOriginalLoja;
    public String nomeFornecedor;
    public String dataRecepcao;
    public double valorTotalGuia;
    public String estadoPagamento;
}
