package pt.trasmum.loja.dominio.fornecedores;

public enum EstadoPedido {
    PENDENTE,
    CONCLUIDO
}
