@startuml Software_de_Loja_Parte4_Dominio_Transacional
skinparam classAttributeIconSize 0
skinparam classFontSize 12
skinparam classHeaderBackgroundColor #EEEDFE
skinparam classBorderColor #534AB7
skinparam classBackgroundColor #FAFAFA
skinparam arrowColor #534AB7
skinparam stereotypeCBackgroundColor #E1F5EE
skinparam stereotypeABackgroundColor #FAC775
skinparam stereotypeIBackgroundColor #D1ECF1
skinparam packageBackgroundColor #F8F8F8
skinparam packageBorderColor #B4B2A9
skinparam linetype ortho
skinparam nodesep 40
skinparam ranksep 50

title Software de Loja — Parte 4: Domínio (Entidades Transacionais e DTOs)

' ╔══════════════════════════════════════╗
' ║     CAMADA DE DOMÍNIO (CONTINUAÇÃO)  ║
' ╚══════════════════════════════════════╝
package "Domínio (Entidades Transacionais)" #FEFEFE {

  class Venda {
    - dataHora : LocalDateTime
    - metodoPagamento : MetodoPagamento
    - totalFaturado : double
    - estado : EstadoVenda
    - idUtilizador : int
    + getDataHora() : LocalDateTime
    + getMetodoPagamento() : MetodoPagamento
    + getTotalFaturado() : double
    + getEstado() : EstadoVenda
    + getIdUtilizador() : int
  }

  class LinhaVenda {
    - id : int
    - idVenda : int
    - idLote : int
    - quantidade : int
    - precoUnitario : double
    + calcularSubtotal() : double
    + getIdLote() : int
  }

  class Fatura {
    - numeroFatura : String
    - dataEmissao : LocalDateTime
    - nifCliente : String
    - idVenda : int
    + getNumeroFatura() : String
    + getNifCliente() : String
    + getIdVenda() : int
  }
  note bottom of Fatura
    numeroFatura: identificador único (RF5).
    nifCliente: campo facultativo.
  end note

  enum MetodoPagamento {
    NUMERARIO
    MULTIBANCO
  }

  enum EstadoVenda {
    EM_CURSO
    FINALIZADA
    ANULADA
  }

  class Devolucao {
    - dataHora : LocalDateTime
    - quantidade : int
    - dataValidadeEmbalagem : LocalDate
    - numeroFatura : String
    - idUtilizador : int
    + getNumeroFatura() : String
    + getQuantidade() : int
    + getDataValidadeEmbalagem() : LocalDate
  }

  class Fornecedor {
    - id : int
    - nome : String
    - nif : String
    - morada : String
    - telefone : String
    - email : String
    - iban : String
    + getId() : int
    + getNome() : String
    + getIban() : String
  }

  class Remessa {
    - dataRecepcao : LocalDate
    - valorTotalGuia : double
    - idFornecedor : int
    - idUtilizador : int
    + getIdFornecedor() : int
    + getDataRecepcao() : LocalDate
    + getValorTotalGuia() : double
  }

  class LinhaRemessa {
    - id : int
    - idRemessa : int
    - idProduto : int
    - idLoteGerado : int
    - quantidade : int
    - dataValidade : LocalDate
    + getIdProduto() : int
    + getIdLoteGerado() : int
    + getQuantidade() : int
  }

  class PedidoRemessa {
    - id : int
    - idFornecedor : int
    - idUtilizador : int
    - dataCriacao : LocalDate
    - estado : EstadoPedido
    + getIdFornecedor() : int
    + getEstado() : EstadoPedido
    + estaPendente() : boolean
  }

  class LinhaPedidoRemessa {
    - id : int
    - idPedido : int
    - idProduto : int
    - quantidadePretendida : int
    + getIdProduto() : int
    + getQuantidadePretendida() : int
  }

  enum EstadoPedido {
    PENDENTE
    CONCLUIDO
  }

  class Pagamento {
    - valor : double
    - dataPagamento : LocalDate
    - tipoPagamento : TipoPagamento
    - idFornecedor : int
    - idRemessa : int
    - idUtilizador : int
    + getIdFornecedor() : int
    + getIdRemessa() : int
    + getTipoPagamento() : TipoPagamento
  }

  enum TipoPagamento {
    TRANSFERENCIA
    NUMERARIO
    CHEQUE
  }

  class SessaoCaixa {
    - id : int
    - idUtilizador : int
    - fundoInicial : List~DetalheNumerario~
    - saldoAtual : double
    - limiteMaximo : double
    - dataAbertura : LocalDateTime
    - dataEncerramento : LocalDateTime
    + getSaldoAtual() : double
    + excedeLimite() : boolean
    + getIdUtilizador() : int
  }
  note bottom of SessaoCaixa
    idUtilizador garante rastreabilidade
    ao utilizador autenticado (RF1, RF9).
  end note

  class Sangria {
    - id : int
    - idSessaoCaixa : int
    - dataHora : LocalDateTime
    - valor : List~DetalheNumerario~
    + getIdSessaoCaixa() : int
    + getTotal() : double
  }

  class DetalheNumerario {
    - denominacao : Denominacao
    - quantidade : int
    - subtotal : double
    + calcularSubtotal() : double
  }

  enum Denominacao {
    CENTO_EUROS
    CINQUENTA_EUROS
    VINTE_EUROS
    DEZ_EUROS
    CINCO_EUROS
    DOIS_EUROS
    UM_EURO
    CINQUENTA_CENTIMOS
    VINTE_CENTIMOS
    DEZ_CENTIMOS
    CINCO_CENTIMOS
    DOIS_CENTIMOS
    UM_CENTIMO
  }

  class FechoDia {
    - id : int
    - dataFecho : LocalDate
    - estadoEnvio : EstadoSincronizacao
    - idLoja : String
    - idUtilizador : int
    + getDataFecho() : LocalDate
    + getEstadoEnvio() : EstadoSincronizacao
    + getIdLoja() : String
  }
  note bottom of FechoDia
    idLoja obtido de ConfiguracaoTerminal
    pelo FechoDiaServico (RF16, ADR-02).
    Compilação e envio responsabilidade
    do FechoDiaServico, não desta entidade.
  end note

  class LogAuditoria {
    - acao : TipoAcao
    - dataHora : LocalDateTime
    - idUtilizador : int
    - entidade : String
    - idEntidade : int
    + getAcao() : TipoAcao
    + getIdUtilizador() : int
  }

  enum TipoAcao {
    VENDA
    DEVOLUCAO
    ALTERACAO_PRECO
    APLICACAO_DESCONTO
    GESTAO_UTILIZADOR
    ALTERACAO_CATALOGO
  }

  ' --- DTOs ---
  class ProdutoDTO {
    + codigoBarras : String
    + nome : String
    + categoria : String
    + precoBase : double
    + stockMinimo : int
  }

  class RemessaDTO {
    + idFornecedor : int
    + valorTotalGuia : double
    + linhas : List~LinhaRemessaDTO~
  }

  class LinhaRemessaDTO {
    + idProduto : int
    + quantidade : int
    + dataValidade : LocalDate
  }

  class PedidoRemessaDTO {
    + idFornecedor : int
    + linhas : List~LinhaPedidoDTO~
  }

  class LinhaPedidoDTO {
    + idProduto : int
    + quantidadePretendida : int
  }

  class UtilizadorDTO {
    + nomeUtilizador : String
    + palavraPasse : String
    + perfil : PerfilUtilizador
  }
}

' Relações entre entidades de domínio
Venda "1" *-- "1..*" LinhaVenda : linhas
Fatura --> Venda : idVenda
Devolucao --> Fatura : numeroFatura
Remessa "1" *-- "1..*" LinhaRemessa : linhas
LinhaRemessa --> Lote : idLoteGerado
PedidoRemessa "1" *-- "1..*" LinhaPedidoRemessa : linhas
' No diagrama esta relação está confusa, o idRemessa dá a entender que é da SessaoCaixa para o Utilizador, quando na verdade é do Pagamento para a Remessa
Pagamento --> Remessa : idRemessa
Pagamento --> Fornecedor : idFornecedor
Remessa --> Fornecedor : idFornecedor
PedidoRemessa --> Fornecedor : idFornecedor
SessaoCaixa "1" *-- "0..*" Sangria : sangrias
' No diagrama esta relação fica um bocado confusa, o fundoInicial parece que está na seta da Fatura -> Venda, mas na verdade é para o DetalheNumerario 
SessaoCaixa "1" *-- "1..*" DetalheNumerario : fundoInicial
Sangria "1" *-- "1..*" DetalheNumerario : valor
SessaoCaixa --> Utilizador : idUtilizador
LogAuditoria --> Utilizador : idUtilizador
FechoDia --> EstadoSincronizacao

' Enumerações domínio
Venda --> MetodoPagamento
Venda --> EstadoVenda
Pagamento --> TipoPagamento
PedidoRemessa --> EstadoPedido
LogAuditoria --> TipoAcao
Denominacao -- DetalheNumerario
FechoDia --> EstadoSincronizacao

' Relação do serviço com DTOs
VendaController ..> MetodoPagamento
RemessaController ..> RemessaDTO
RemessaController ..> PedidoRemessaDTO
CatalogoController ..> ProdutoDTO
UtilizadorController ..> UtilizadorDTO

@enduml